<resources>
	<!-- Global -->
	<string name="app_name">Cross Platform Dev</string>
	<string name="save">Save</string>

	<!-- LoginRegisterActivity -->
	<string name="email_hint">Email</string>
	<string name="password_hint">Password</string>
	<string name="login_btn">Login</string>
	<string name="register_btn">Register</string>

	<!-- TaskListActivity -->
	<string name="new_task">New Task</string>
	<string name="logout">Logout</string>
	<string name="refresh">Refresh</string>
	<string name="task_name">Task Name</string>
	<string name="task_amount">Task Amount</string>
	<string name="task_created_date">11/11</string>

	<!-- CreateTaskActivity -->
	<string name="task_created_date_lbl">Created Date</string>
	<string name="task_name_placeholder">Buy Paper Towels</string>
	<string name="task_amount_placeholder">101</string>

</resources>
