<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/task_name"
			android:textAppearance="@style/TextLabel"/>

		<EditText
			android:id="@+id/TaskNameField"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:textAppearance="@style/TextField"
			android:padding="6dp"
			android:lines="1"
			android:hint="@string/task_name_placeholder"
			android:background="@drawable/list_item_border"/>

		<TextView
			android:paddingTop="20dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/task_amount"
			android:textAppearance="@style/TextLabel"/>

		<EditText
			android:id="@+id/TaskAmountField"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:textAppearance="@style/TextField"
			android:maxLength="9"
			android:lines="1"
			android:padding="6dp"
			android:hint="@string/task_amount_placeholder"
			android:background="@drawable/list_item_border"/>

		<Button
			android:id="@+id/CreateTaskBtn"
			android:layout_marginTop="20dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/save"
			android:padding="10dp"/>

	</LinearLayout>

</ScrollView>