<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimary">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:orientation="vertical"
		android:weightSum="1"
		android:gravity="center">

		<LinearLayout
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="75dp">

			<EditText
				android:id="@+id/EmailField"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_gravity="center"
				android:hint="@string/email_hint"
				android:inputType="textEmailAddress"
				android:background="@android:color/white"
				android:padding="@dimen/input_padding"
				android:lines="1"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp">

			<EditText
				android:id="@+id/PasswordField"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:layout_gravity="center"
				android:hint="@string/password_hint"
				android:inputType="textPassword"
				android:fontFamily="sans-serif"
				android:background="@android:color/white"
				android:padding="@dimen/input_padding"
				android:lines="1"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:orientation="horizontal"
			android:weightSum="1">

			<Button
				android:id="@+id/LoginBtn"
				android:layout_marginEnd="5dp"
				android:layout_weight="0.5"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:text="@string/login_btn"
				android:textAllCaps="false"
				android:textSize="16sp"/>

			<Button
				android:id="@+id/RegisterBtn"
				android:layout_marginStart="5dp"
				android:layout_weight="0.5"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:text="@string/register_btn"
				android:textAllCaps="false"
				android:textSize="16sp"/>

		</LinearLayout>

	</LinearLayout>

</ScrollView>
