<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:background="@drawable/list_item_border"
	android:weightSum="1">

	<LinearLayout
		android:layout_weight="0.80"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="vertical">

		<TextView
			android:id="@+id/TaskName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="2dp"
			android:text="@string/task_name"
			android:textSize="17sp"
			android:lines="1"
			android:textColor="@android:color/black"/>

		<TextView
			android:id="@+id/TaskAmount"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="2dp"
			android:text="@string/task_amount"
			android:textSize="17sp"
			android:lines="1"
			android:textColor="@android:color/darker_gray"/>

	</LinearLayout>

	<LinearLayout
		android:layout_weight="0.20"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="vertical">

		<TextView
			android:id="@+id/TaskCreatedDate"
			android:textAlignment="viewEnd"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:lines="1"
			android:text="@string/task_created_date"
			android:textSize="15sp"/>

	</LinearLayout>

</LinearLayout>